src/less/projects.less
div#projectPage {
  font-family: open sans, sans-serif;
  width: 100%;
  & img:hover {
    transform: scale(1.5);
    transition: transform .2s;
  }
}

div#projectPage h2 {
  font-family: open sans,sans-serif;
}

div#projectPageFourthRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#projectPageThirdRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#projectPageSecondRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#projectPageFirstRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#projectPagePlusOneRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#quoteBuilderWrapper {
  text-align: center;
  & img {
    width: 400px;
  }
  & h2 {
    text-align: center;
  }
  & label {
    text-align: left;
  }
}

div#quoteBuilderLabelWrapper {
  text-align: left;
  display: grid;
}

div#projectPagePlusTwoRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#porjectPagePlusOneRow {
  overflow: auto;
  margin-bottom: 15px;
}

div#projectPagePlusThreeRow {
  border-top-style: solid;
  border-top-width: 2px;
  overflow: auto;
  margin-bottom: 15px;
}

div#nioSettingsWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#nioSettingsImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#nioSettingsLabelWrapper {
    display: grid;
    float: right;
  }
}

div#quoteBuilderPic,
div#nioStabliltyPic,
div#nioSettingsPic {
  display: grid;
  margin-bottom: 10px;
}

div#nioStabilityWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#nioStabilityImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & label {
    width: fit-content;
    width: -moz-fit-content;
    //margin: auto;
  }
}

div#quoteBuilderPic {
  width: fit-content;
  margin: auto;
}

div#lostInSpaceWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#lostInSpaceImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#lostInSpaceLabelWrapper {
    display: grid;
    float: right;
  }
}

div#eggManWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#eggManImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#eggManLabelWrapper {
    display: grid;
    float: right;
  }
}

div#medevilWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#medevilImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#medevialLabelWrapper {
    display: grid;
    float: right;
  }
}


div#eggciteBikeWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#eggciteBikeImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#eggciteBikeLabelWrapper {
    display: grid;
    float: right;
  }
}

div#salvareWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#salvareImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#salvareLabelWrapper {
    display: grid;
    float: right;
  }
}


div#medevilDialogWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#medevialDialogImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#medevialDialogLabelWrapper {
    display: grid;
    float: right;
  }
}


div#ncBrowseWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#ncBrowseImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#ncBrowseLabelWrapper {
    display: grid;
    float: right;
  }
}

div#turtlesWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#turtlesImage {
    float: left;
    height: 200px;
    width: 200px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#turtlesLabelWrapper {
    display: grid;
    float: right;
  }
}

div#quickCustomerWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#quickCustomerImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#quickCustomerLabelWrapper {
    display: grid;
    float: right;
  }
}

div#algorithmsWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: left;
  display: grid;
  & img#algorithmsImage {
    float: left;
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
  & div#algorithmsLabelWrapper {
    display: grid;
    float: right;
  }
}

div#scapeGoatTreeWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & div#scapeGoatTreeLabelWrapper {
    display: grid;
    float: right;
  }
  & img#scapeGoatTreeImage {
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
}

div#powerBiWrapper {
  width: 50%;
  //height: 800px;
  overflow-wrap: normal;
  float: right;
  display: grid;
  & img#powerBiImage {
    height: 200px;
    width: 300px;
    //z-index: 1;
    //border-radius: 100%;
    border: 3px solid white;
  }
}

